--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "ccxt": "^1.93.101",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.2",
+    "ethers": "^5.7.1",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
     "node-binance-api": "^0.13.1"
