--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "ethers": "^5.7.1",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
-    "node-binance-api": "^0.13.1"
+    "node-binance-api": "^0.13.1",
+    "twilio": "^3.82.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
