--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.1.0",
     "ccxt": "^1.93.101",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.2",
     "ethers": "^5.7.1",
