--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.2",
     "ethers": "^5.7.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "node-binance-api": "^0.13.1",
     "twilio": "^3.82.2"
